# ib-connect

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  jobs.db  pyproject.toml  setup.py
data/: 265598_1 day.csv
ib_connect/: README.md  __init__.py  jobs.db
ib_connect.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ib_connect/gui/: app.py  config.example.json  config.json
ib_connect/gui/static/css/: custom.css
ib_connect/gui/templates/: index.html
ib_connect/shared/: __init__.py
ib_connect/skills/: __init__.py
ib_connect/skills/data_upload/: SKILL.md  config.json  data_upload.py
ib_connect/skills/ib_download/: SKILL.md  __init__.py  config.example.json  config.json  download.py  download_service.py  ib_download.py  job_queue.py  jobs.db
ib_connect/skills/ib_query/: SKILL.md  __init__.py  ib_query.py  query.py
shared/: __init__.py
skills/data-upload/: SKILL.md  __init__.py  config.json  data_upload.py
skills/data-upload/errors/: AAPL.265598.1day.csv  contracts.json  openclaw.json
skills/data-upload/processed/: BTCUSD.json  aapl_contract.json  dow30.json
skills/ib-download/: SKILL.md  __init__.py  config.json  download_service.py  ib_download.py  job_queue.py  queue.py
skills/ib-query/: __init__.py  ib_query.py
